Fix new launcher